--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "pallo/lib-common",
-    "description": "Shared classes of the Pallo framework",
+    "name": "ride/lib-common",
+    "description": "Shared classes of the Ride framework",
     "license": "MIT",
     "version": "0.4.0",
     "authors": [
@@ -11,7 +11,7 @@
     ],
     "autoload": {
         "psr-0": {
-            "pallo\\library\\": ["src/", "test/src/"]
+            "ride\\library\\": ["src/", "test/src/"]
         }
     }
 }
